@@ -186,6 +186,8 @@
 - TW-1460 Empty due dates lead to endless loop.
 - TW-1463 A few more problems with special characters in filters, pluses,
           question marks, and braces (thanks to Ralph Bean).
+- TW-1468 Filtering for project and description has issues (thanks to Richard
+          Boß).
 - Added new holidays.xy-XY.rc definition files
 - Removed deprecated 'echo.command' setting, in favor of the 'header' and
   'affected' verbosity tokens.
